# robot_ws

./: install.sh  run_mission.sh  课程设计要求.docx
ar_pose/: CMakeLists.txt  package.xml  readme.md
ar_pose/cam_info/: base_camera.yaml  usb_cam.yaml
ar_pose/launch/: ar_base.launch  ar_base_sim.launch  ar_pick.launch  usbcam_base.launch  usbcam_hand.launch
ar_pose/msg/: ArPose.msg
ar_pose/src/: PoseAdjust.cpp  PoseAdjust.h  ros_node.cpp
ar_pose/srv/: Track.srv
arm_controller/: CMakeLists.txt  package.xml
arm_controller/srv/: PickPlace.srv
models/: readme.md
models/reinovo_raicom_oryxbot/: model.sdf
oryxbot_description/: CMakeLists.txt  package.xml  urdf.rviz
oryxbot_description/config/: arm_controllers copy.yaml  arm_controllers.yaml  gazebo.rviz  joint_names_oryxbot_description.yaml
oryxbot_description/include/: global_constants.hh  home_pose.hh  inverse_kinematics.hh  simple_pick.hh
oryxbot_description/launch/: ar_base_gazebo.launch  ar_hand_gazebo.launch  display.launch  display_all_info.launch  display_swift.launch  gazebo.launch  local_display.launch  pick_ar_gazebo.launch  swiftpro_control.launch
oryxbot_description/meshes/: back_lidar_Link.STL  base_cam_Link.STL  box_base_link.STL  control_box_Link.STL  front_lidar_Link.STL  gaiban1_Link.STL  gaiban2_Link.STL  guoxianhuan_Link.STL  jiting_Link.STL  left_sonic_Link.STL  right_sonic_Link.STL  wheel1_Link.STL  wheel2_Link.STL  wheel3_Link.STL  wheel4_Link.STL
oryxbot_description/src/: fk_swiftpro.cpp  home_pose.cpp  ik_swiftpro.cpp  mission_controller.py  pick_ar_gazebo.cpp  pose_swiftpro.cpp  simple_picker.cpp
oryxbot_description/world/: final_task.world  reinovo_raicom_final.world  reinovo_robocom_match.world
oryxbot_description/xacro/: gazebo_plugin.xacro  magician.xacro  normal_wheel.xacro  oryxbase.xacro  oryxbot.xacro  swiftpro.gazebo  swiftpro.xacro  swiftpro_copy.xacro  swiftpro_gazebo_plugin.xacro  swiftpro_trans.xml
pid_lib/: package.xml
pid_lib/include/pid_lib/: pid.h
relative_move/: CMakeLists.txt  package.xml
relative_move/src/: RelativeMove.cpp  RelativeMove.h  ros_node.cpp
relative_move/srv/: SetRelativeMove.srv
