<?xml version="1.0"?>
<package format="2">
  <name>ar_pose</name>
  <version>0.0.0</version>
  <description>The ar_pose package</description>
  <maintainer email="ln@todo.todo">ln</maintainer> 
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>relative_move</build_depend>
  <build_depend>ar_track_alvar_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <!-- <build_export_depend>relatvie_move</build_export_depend> -->
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <!-- <exec_depend>relatvie_move</exec_depend> -->

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
